fixed scrollbar problem at firefox

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -9,10 +9,10 @@ option
 
 html
   height: 100%
-
-
+  overflow-y: scroll
+  
 body
-  min-height: 100%
+  height: 100%
   font-size: 100%
   font-family: Lucida Grande,Verdana,sans-serif
   font-variant: normal
